--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon ./index.js localhost 3000"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +21,8 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3",
-    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "mysql2": "^3.11.3"
   }
 }
