--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js localhost 3000"
+    "start": "nodemon ./index.js localhost 3000",
+    "vercel-build": "node db/sync.js"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +23,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
-    "@vercel/postgres": "^0.5.1",
-    "pg": "^8.11.3",
+    "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "session-file-store": "^1.5.0"
