--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,6 @@
   "env": {
     "NODE_ENV": "production"
   },
+  "buildCommand": "npm run vercel-build",
   "installCommand": "npm install --force"
 } 
