--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_HOST=sql10.freesqldatabase.com
-DB_USER=sql10748608
-DB_PASSWORD=Check your emails
-DB_NAME=sql10748608
-DB_PORT=3306 
+DATABASE_URL=postgresql://sql10748608_owner:EaTm1tXAuzi0@ep-sparkling-rain-a5kzxhxg.us-east-2.aws.neon.tech/sql10748608?sslmode=require 
