--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon ./index.js",
-    "vercel-build": "node db/sync.js",
-    "build": "npm run vercel-build"
+    "start": "nodemon ./index.js localhost 3000"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +22,13 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
-    "pg": "^8.13.1",
+    "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "@vercel/postgres": "^0.5.1"
+  },
+  "devDependencies": {
+    "pg": "^8.11.3"
   }
 }
