--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,7 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "installCommand": "npm install",
+  "buildCommand": "npm run vercel-build"
 } 
