--- a/vercel.json
+++ b/vercel.json
@@ -30,5 +30,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/**/*.js": {
+      "includeFiles": "views/**/*"
+    }
   }
 } 
