--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,7 @@
       "src": "index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": [
-          "views/**/*",
-          "public/**/*",
-          "helpers/**/*",
-          "controllers/**/*",
-          "models/**/*",
-          "routes/**/*"
-        ]
+        "includeFiles": ["views/**"]
       }
     }
   ],
@@ -26,23 +19,11 @@
       "dest": "/public/script/$1"
     },
     {
-      "src": "/img/(.*)",
-      "dest": "/public/img/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/public/favicon.ico"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/public/assets/$1"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
       "src": "/(.*)",
       "dest": "/index.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
